# activitymux

./: .gitignore  LICENSE  README.md  package-lock.json  package.json
.github/workflows/: build.yml  pages.yml
site/: index.html  styles.css
src/: App.css  App.tsx  api.ts  demo.ts  main.tsx  theme.ts  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: config.rs  discord.rs  lib.rs  main.rs  models.rs  process_monitor.rs  resolver.rs  service.rs
src/components/: ActivityCard.tsx  Dashboard.tsx  PresetsScreen.tsx  ProcessPicker.tsx  RulesScreen.tsx  SettingsScreen.tsx
