[package]
name = "activitymux"
version = "0.2.0"
description = "A cross-platform Discord Rich Presence rule engine"
authors = ["NaxeCode"]
edition = "2021"
license = "MIT"
repository = "https://github.com/NaxeCode/activitymux"

[lib]
name = "activitymux_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
discord-rich-presence = "1.1.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sysinfo = "0.39.6"
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-autostart = "2"
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
tauri-plugin-single-instance = "2"
thiserror = "2"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
